[gd_scene load_steps=4 format=3 uid="uid://cv75vrsdg4oso"]

[ext_resource type="Texture2D" uid="uid://dmgnnu12nswrx" path="res://Sprites/Hole.png" id="1_5m5wc"]
[ext_resource type="Script" path="res://Scripts/Exit.gd" id="1_guyn7"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g6yx2"]
radius = 9.0
height = 28.0

[node name="Exit" type="Node2D"]
position = Vector2(189, -266)
script = ExtResource("1_guyn7")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_5m5wc")

[node name="Area" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="Area"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_g6yx2")

[connection signal="area_entered" from="Area" to="." method="_on_area_area_entered"]
[connection signal="body_entered" from="Area" to="." method="_on_area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_area_body_exited"]
